@@ -1,3 +1,8 @@
+2007-02-05  Dave Brolley  <brolley@redhat.com>
+
+	* ld-undefined/undefined.exp: XFAIL the undefined test
+	* ld-mep: New, with content.
+
 2007-02-05  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* ld-i386/pcrel16.d: Undo the last change.
